--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -40,7 +40,9 @@ jobs:
           npm install
           npm ci
       - name: build
-        run: npm run build
+        run: |
+          npm install typescript
+          npm run build
   push_to_docker_hub:
     runs-on: ubuntu-latest
     needs: [build]
